    ResponseHandler calls.

* JAX-RS Query Parameter Parse Error Handling

  When a query parameter cannot be parsed (for example in Integer parameter
  whose supplied value could not be converted to an Integer), a
  400 BAD REQUEST will be issued instead of the Jersey default 404 NOT FOUND.

* Library Upgrades

  - AutoValue to 1.0
  - Jetty to 9.2.7
  - jnr-posix to 3.0.9

Platform 1.10

* [Bug] NPE if config class bound both with and without a config prefix.

* [Bug] DiscoveryBinder.bindDiscoveredHttpClient() exporting HttpClient
  metrics with wrong name.

Platform 1.09

* Deprecated APIs removed

  - Bootstrap public constructors
  - ConfigAssertions.assertDefaults()
  - ConfigAssertions.assertDeprecatedEquivalence()
  - "node.binary-spec" and "node.config-spec" configuration options
  - MeterStat
  - TimedStat
  - Duration.convertTo()

* Guava 17 compatibility

  We reverted use of features preventing running with Guava 17.

* Library upgrades

  - slf4j to 1.7.8

Platform 1.08

* Configuration module defaults

  Guice modules may now override default configuration values by implementing
  ConfigurationDefaultingModule.getConfigurationDefaults(). Such defaults
  override those in the config classes but are themselves overridden by
  Bootstrap.withApplicationDefaults().

* AsyncSemaphore

  AsyncSemaphore is a non-blocking concurrency throttler for asynchronous
  tasks. It guarantees that no more than a fixed number of asynchronous tasks
  will be outstanding at any point in time without blocking any submission
  threads. Task completion is determined by a ListenableFuture returned by the
  supplied submitter function.

* Discovery read timeout

  We reduced the discovery client's default read timeout to 5 seconds. This
  is to avoid announcements timing out of Discovery when one or more
  Discovery servers hang.

* HttpClient request queue size default change

  We reduced the http-client.max-requests-queued-per-destination default to